# kpaint

.github/workflows/: build.yml
data/: gui.xml
data/fonts/: LICENSE.txt
data/strings/: README.md
data/widgets/: about.xml  advanced_mode.xml  aseprite_update.xml  ask_for_color_profile.xml  brush_slot_params.xml  canvas_size.xml  cel_properties.xml  color_curve_point.xml  color_mode.xml  convolution_matrix.xml  css_options.xml  debugger.xml  despeckle.xml  duplicate_sprite.xml  dynamics.xml  enter_license.xml  export_file.xml  export_sprite_sheet.xml  file_selector.xml  font_popup.xml  gif_options.xml  goto_frame.xml  grid_settings.xml  home_view.xml  import_sprite_sheet.xml  incompat_file.xml  jpeg_options.xml  keyboard_shortcuts.xml  layer_properties.xml  main_window.xml  modify_selection.xml  new_folder_window.xml  new_layer.xml  new_sprite.xml  open_sequence.xml  options.xml  outline.xml  palette_from_sprite.xml  palette_popup.xml  palette_size.xml  (+15 more)
src/: CMakeLists.txt  README.md  config.h
src/app/: CMakeLists.txt  active_site_handler.cpp  active_site_handler.h  app.cpp  app.h  app_brushes.cpp  app_brushes.h  app_menus.cpp  app_menus.h  app_mod.h  brush_slot.h  check_update.cpp  check_update.h  check_update_delegate.h  closed_docs.cpp  closed_docs.h  cmd.cpp  cmd.h  cmd_sequence.cpp  cmd_sequence.h  cmd_transaction.cpp  cmd_transaction.h  color.cpp  color.h  color_picker.cpp  color_picker.h  color_spaces.cpp  color_spaces.h  color_target.h  color_tests.cpp  color_utils.cpp  color_utils.h  console.cpp  console.h  context.cpp  context.h  context_access.h  context_flags.cpp  context_flags.h  context_observer.h  (+115 more)
src/cfg/: CMakeLists.txt  README.md  cfg.cpp  cfg.h
src/desktop/: CMakeLists.txt
src/desktop/linux/: CMakeLists.txt
src/desktop/linux/kde/: CMakeLists.txt  aseprite_thumb_creator.cpp  aseprite_thumb_creator.h
src/desktop/linux/mime/: aseprite.xml
src/desktop/osx/: CMakeLists.txt  thumbnail.h
src/desktop/win/: CMakeLists.txt  class_factory.h  dllmain.cpp  thumbnail_handler.cpp  thumbnail_handler.h
src/dio/: CMakeLists.txt  README.md  aseprite_common.cpp  aseprite_common.h  aseprite_decoder.cpp  aseprite_decoder.h  decode_delegate.h  decode_file.cpp  decode_file.h  decoder.cpp  decoder.h  detect_format.cpp  detect_format.h  file_format.h  file_interface.h  pixel_io.h  stdio.cpp
src/doc/: CMakeLists.txt  README.md  algo.cpp  algo.h  aligned_memory.h  anidir.cpp  anidir.h  blend_benchmark.cpp  blend_funcs.cpp  blend_funcs.h  blend_image.cpp  blend_image.h  blend_internals.h  blend_mode.cpp  blend_mode.h  brush.cpp  brush.h  brush_pattern.h  brush_type.cpp  brush_type.h  brushes.h  cancel_io.h  cel.cpp  cel.h  cel_data.cpp  cel_data.h  cel_data_io.cpp  cel_data_io.h  cel_io.cpp  cel_io.h  cel_list.h  cels_range.cpp  cels_range.h  color.cpp  color.h  color_mode.h  color_scales.h  color_scales_tests.cpp  compressed_image.cpp  compressed_image.h  (+132 more)
src/filters/: CMakeLists.txt  brightness_contrast_filter.cpp  brightness_contrast_filter.h  color_curve.cpp  color_curve.h  color_curve_filter.cpp  color_curve_filter.h  convolution_matrix.cpp  convolution_matrix.h  convolution_matrix_filter.cpp  convolution_matrix_filter.h  filter.cpp  filter.h  filter_indexed_data.h  filter_manager.h  hue_saturation_filter.cpp  hue_saturation_filter.h  invert_color_filter.cpp  invert_color_filter.h  median_filter.cpp  median_filter.h  neighboring_pixels.h  outline_filter.cpp  outline_filter.h  replace_color_filter.cpp  replace_color_filter.h  target.h  tiled_mode.h
src/fixmath/: CMakeLists.txt  fixmath.cpp  fixmath.h
src/main/: main.cpp
src/net/: CMakeLists.txt  README.md  http_headers.cpp  http_headers.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h
src/render/: CMakeLists.txt  README.md  bg_options.h  bg_type.h  color_histogram.h  dithering.h  dithering_algorithm.h  dithering_matrix.h  error_diffusion.cpp  error_diffusion.h  extra_type.h  get_sprite_pixel.cpp  get_sprite_pixel.h  gradient.cpp  gradient.h  median_cut.h  onionskin_options.h  onionskin_position.h  onionskin_type.h  ordered_dither.cpp  ordered_dither.h  ordered_dither_tests.cpp  projection.h  quantization.cpp  quantization.h  rasterize.cpp  rasterize.h  render.cpp  render.h  render_benchmark.cpp  render_tests.cpp  task_delegate.h  zoom.cpp  zoom.h
src/steam/: README.md  (+3 more)
src/updater/: CMakeLists.txt  check_update.cpp  check_update.h  user_agent.cpp  user_agent.h
src/ver/: CMakeLists.txt  info.c  info.h
(+1047 files in other folders)
